--- a/_config.yml
+++ b/_config.yml
@@ -253,7 +253,7 @@ tag_archive:
 #   enabled:
 #     - categories
 #     - tags
-#   layouts:
+   layouts:
 #     category: archive-taxonomy
 #     tag: archive-taxonomy
 #   permalinks:
