--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-m
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
- breadcrumbs            : true # true, false (default)
+breadcrumbs             : true # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      # url: "mailto:your.name@email.com"
+      url: "mailto:limjh9298@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://LimJaeHyeon9298.github.io."
@@ -124,10 +124,10 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com.LimJaeHyeon9298"
+      url: "https://github.com.LimJaeHyeon9298/"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
+      url: "https://www.instagram.com/jaehyeon997/"
 
 # Site Footer
 footer:
@@ -137,7 +137,7 @@ footer:
       url: "https://github.com.LimJaeHyeon9298"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: "https://www.instagram.com/jaehyeon997"
+      url: "https://www.instagram.com/jaehyeon997/"
 
 
 # Reading Files
