--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:limjh9298@gmail.com"
+      #url: "mailto:limjh9298@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
       url: "https://LimJaeHyeon9298.github.io."
@@ -124,7 +124,7 @@ author:
       # url: "https://facebook.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com.LimJaeHyeon9298/"
+      url: "https://github.com.LimJaeHyeon9298"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/jaehyeon997/"
@@ -134,7 +134,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com.LimJaeHyeon9298"
+      url: "https://github.com/LimJaeHyeon9298"
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       url: "https://www.instagram.com/jaehyeon997/"
